# dotmgr

./: README.md  main.py  pyproject.toml
src/dotmgr/: __init__.py
src/dotmgr/cli/: __init__.py  add.py  list.py  remove.py  snapshot.py
