[project]
name = "dotmgr"
version = "0.1.0"
description = "Dotfiles manager"
readme = "README.md"
authors = [
    { name = "Ender", email = "ndxendernight@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
]

[project.scripts]
dotmgr = "dotmgr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
